test/errors/ubyte_neg2.ls

#OUTPUT
#Syntax Error: Invalid use of negation operator.
# -> [14] ubyte y = -x
#
#END

#RET 0

extern func printf(s:str, ...)

func main -> int
    ubyte x = 9
    ubyte y = -x

    return 0
end

